# badger

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: RULES.md
packaging/: install.sh
packaging/aur/badger-cleaner/: .SRCINFO  PKGBUILD
packaging/aur/badger-cleaner-bin/: .SRCINFO  PKGBUILD
src/: cli.rs  config.rs  ctx.rs  lib.rs  main.rs  output.rs  privilege.rs  purge.rs  snapper.rs  uninstall_leftovers.rs
src/analyze/: disk.rs  mod.rs  sizer.rs  trash.rs
src/commands/: analyze.rs  clean.rs  history.rs  mangen.rs  mod.rs  optimize.rs  purge.rs  shared.rs  status.rs  uninstall.rs  whitelist.rs
src/core/: exec.rs  item.rs  mod.rs  runner.rs  scan.rs
src/pkg/: desktop.rs  flatpak.rs  mod.rs  pacman.rs  recommend.rs  snap.rs
src/rules/: command.rs  dev.rs  leftovers.rs  mod.rs  moderate.rs  optimize.rs  snap.rs  snapshots.rs  user.rs
src/safety/: deleter.rs  journal.rs  mod.rs  protected.rs  whitelist.rs
src/sys/: cachyos.rs  cpu.rs  disk.rs  health.rs  hwmon.rs  mem.rs  mod.rs  net.rs  power.rs  procs.rs  psi.rs
src/tui/: checklist.rs  confirm.rs  dashboard.rs  explorer.rs  mod.rs  picker.rs
src/util/: dirsize.rs  mod.rs
tests/: analyze_test.rs  clean_test.rs  cli_test.rs  mangen_test.rs  optimize_test.rs  purge_test.rs  risky_confirm_test.rs  safety_test.rs  uninstall_test.rs
