[package]
name = "badger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.7"
crossterm = "0.29.0"
globset = "0.4.18"
jiff = "0.2.31"
nix = { version = "0.31.3", features = ["user", "fs"] }
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.27.0"
